add vscode bierner.markdown-preview-enhanced to Brewfile

--- a/.config/brew/Brewfile
+++ b/.config/brew/Brewfile
@@ -34,9 +34,9 @@ cask "zoom"
 
 vscode "almenon.arepl"
 vscode "bierner.markdown-mermaid"
-vscode "bierner.markdown-preview-enhanced"
 vscode "bierner.markdown-preview-github-styles"
 vscode "bierner.markdown-yaml-preamble"
+vscode "shd101wyy.markdown-preview-enhanced"
 vscode "eamodio.gitlens"
 vscode "github.vscode-github-actions"
 vscode "mechatroner.rainbow-csv"
