--- a/.config/brew/Brewfile
+++ b/.config/brew/Brewfile
@@ -1,9 +1,6 @@
-tap "homebrew/command-not-found"
-
 brew "antidote"
 brew "autojump"
 brew "bat"
-brew "ca-certificates"
 brew "direnv"
 brew "exiftool"
 brew "gh"
@@ -11,46 +8,20 @@ brew "git"
 brew "git-lfs"
 brew "jq"
 brew "make"
-brew "ncurses"
-brew "openssl@3"
+brew "python@3.12"
 brew "shfmt"
 brew "telnet"
 brew "tree"
 brew "uv"
 brew "zsh"
-
 cask "1password"
 cask "alfred"
 cask "appcleaner"
 cask "cursor"
 cask "google-chrome"
 cask "iterm2"
-cask "macvim-app"
+cask "macvim"
+cask "moom"
 cask "postman"
 cask "sourcetree"
-cask "visual-studio-code"
 cask "zoom"
-
-vscode "almenon.arepl"
-vscode "bierner.markdown-mermaid"
-vscode "bierner.markdown-preview-github-styles"
-vscode "bierner.markdown-yaml-preamble"
-vscode "shd101wyy.markdown-preview-enhanced"
-vscode "eamodio.gitlens"
-vscode "github.vscode-github-actions"
-vscode "mechatroner.rainbow-csv"
-vscode "ms-azuretools.vscode-containers"
-vscode "ms-python.debugpy"
-vscode "ms-python.isort"
-vscode "ms-python.python"
-vscode "ms-python.vscode-pylance"
-vscode "ms-python.vscode-python-envs"
-vscode "ms-toolsai.jupyter"
-vscode "ms-toolsai.jupyter-keymap"
-vscode "ms-toolsai.jupyter-renderers"
-vscode "ms-toolsai.vscode-jupyter-cell-tags"
-vscode "ms-toolsai.vscode-jupyter-slideshow"
-vscode "ms-vscode-remote.remote-containers"
-vscode "shaneliesegang.vscode-simple-icons-rev"
-vscode "vscodevim.vim"
-vscode "zainchen.json"
