update brewfile - add vscode + extensions, remove python (will use uv to for python installs)

--- a/.config/brew/Brewfile
+++ b/.config/brew/Brewfile
@@ -8,12 +8,12 @@ brew "git"
 brew "git-lfs"
 brew "jq"
 brew "make"
-brew "python@3.12"
 brew "shfmt"
 brew "telnet"
 brew "tree"
 brew "uv"
 brew "zsh"
+
 cask "1password"
 cask "alfred"
 cask "appcleaner"
@@ -21,7 +21,30 @@ cask "cursor"
 cask "google-chrome"
 cask "iterm2"
 cask "macvim"
-cask "moom"
 cask "postman"
 cask "sourcetree"
+cask "visual-studio-code"
 cask "zoom"
+
+vscode "almenon.arepl"
+vscode "christian-kohler.path-intellisense"
+vscode "eamodio.gitlens"
+vscode "github.vscode-github-actions"
+vscode "mechatroner.rainbow-csv"
+vscode "ms-azuretools.vscode-containers"
+vscode "ms-python.black-formatter"
+vscode "ms-python.debugpy"
+vscode "ms-python.isort"
+vscode "ms-python.pylint"
+vscode "ms-python.python"
+vscode "ms-python.vscode-pylance"
+vscode "ms-python.vscode-python-envs"
+vscode "ms-toolsai.jupyter"
+vscode "ms-toolsai.jupyter-keymap"
+vscode "ms-toolsai.jupyter-renderers"
+vscode "ms-toolsai.vscode-jupyter-cell-tags"
+vscode "ms-toolsai.vscode-jupyter-slideshow"
+vscode "ms-vscode-remote.remote-containers"
+vscode "shaneliesegang.vscode-simple-icons-rev"
+vscode "vscodevim.vim"
+vscode "zainchen.json"
