--- a/.config/brew/Brewfile
+++ b/.config/brew/Brewfile
@@ -8,6 +8,7 @@ brew "git"
 brew "git-lfs"
 brew "jq"
 brew "make"
+brew "micromamba"
 brew "shfmt"
 brew "telnet"
 brew "tree"
@@ -18,33 +19,10 @@ cask "1password"
 cask "alfred"
 cask "appcleaner"
 cask "cursor"
+cask "claude-code"
 cask "google-chrome"
 cask "iterm2"
 cask "macvim"
 cask "postman"
 cask "sourcetree"
-cask "visual-studio-code"
 cask "zoom"
-
-vscode "almenon.arepl"
-vscode "christian-kohler.path-intellisense"
-vscode "eamodio.gitlens"
-vscode "github.vscode-github-actions"
-vscode "mechatroner.rainbow-csv"
-vscode "ms-azuretools.vscode-containers"
-vscode "ms-python.black-formatter"
-vscode "ms-python.debugpy"
-vscode "ms-python.isort"
-vscode "ms-python.pylint"
-vscode "ms-python.python"
-vscode "ms-python.vscode-pylance"
-vscode "ms-python.vscode-python-envs"
-vscode "ms-toolsai.jupyter"
-vscode "ms-toolsai.jupyter-keymap"
-vscode "ms-toolsai.jupyter-renderers"
-vscode "ms-toolsai.vscode-jupyter-cell-tags"
-vscode "ms-toolsai.vscode-jupyter-slideshow"
-vscode "ms-vscode-remote.remote-containers"
-vscode "shaneliesegang.vscode-simple-icons-rev"
-vscode "vscodevim.vim"
-vscode "zainchen.json"
