add cask conductor to Brewfile

--- a/.config/brew/Brewfile
+++ b/.config/brew/Brewfile
@@ -18,8 +18,9 @@ brew "zsh"
 cask "1password"
 cask "alfred"
 cask "appcleaner"
-cask "cursor"
 cask "claude-code"
+cask "conductor"
+cask "cursor"
 cask "google-chrome"
 cask "iterm2"
 cask "macvim"
